Connected UIlabels with code and show weather type image

--- a/simple-weather/simple-weather/Info.plist
+++ b/simple-weather/simple-weather/Info.plist
@@ -49,5 +49,10 @@
 	<string>we need your location to show weather !</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
